<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="?dialogPreferredPadding">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textSubjectTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
            android:text="@string/subjectTitle" />

        <TextView
            android:id="@+id/textSubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
            android:text="@string/noneText" />

        <TextView
            android:id="@+id/textIssuerTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
            android:text="@string/issuerTitle"/>

        <TextView
            android:id="@+id/textIssuer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
            android:text="@string/noneText" />

        <TextView
            android:id="@+id/textSanTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
            android:text="@string/sanTitle"/>

        <TextView
            android:id="@+id/textSan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
            android:text="@string/noneText" />
    </LinearLayout>
</ScrollView>